--- a/results.html
+++ b/results.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Results — ONIX Marketing</title>
-  <meta name="description" content="Real proof, real reviews, real outcomes. Explore results and book a call." />
+  <title>ONIX Results</title>
+  <meta name="description" content="Real proof, screenshots, and reviews from clients using the ONIX acquisition engine." />
   <link rel="icon" href="logo2.png" type="image/png" />
-
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- Calendly -->
-  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <script>
+    window.BOOKING_URL = "https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01";
+  </script>
 </head>
 
 <body>
-  <div id="chartTip" class="chart-tip" aria-hidden="true"></div>
-
   <div class="site-bg" aria-hidden="true">
     <div class="site-aurora"></div>
     <div class="site-noise"></div>
@@ -29,202 +26,153 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <a href="index.html" aria-label="Go to home">
-        <img src="logo2.png" alt="Acquisition Engine" class="logo" />
+      <a href="index.html" class="logo-link" aria-label="Go to home">
+        <img src="logo2.png" alt="ONIX" class="logo" />
       </a>
 
       <nav class="nav">
-        <a href="results.html">Results</a>
+        <a href="index.html#proof">Results</a>
         <a href="index.html#how">How it works</a>
         <a href="index.html#pricing">Pricing</a>
-        <a href="#book" class="btn-primary">Book a Call</a>
+        <a href="results.html" aria-current="page">Results Page</a>
+        <a href="#book" class="btn-primary" data-book>Book a Call</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="hero results-hero" id="top">
-    <div class="hero-inner">
-      <div class="hero-copy">
-        <span class="pill">📌 Real proof, not “marketing talk”</span>
-        <h1>Results you can feel.</h1>
-        <p>
-          Screenshots. Reviews. Outcomes.
-          This is what it looks like when follow-up runs daily and your calendar stays full.
+  <!-- RESULTS HERO -->
+  <section class="results-hero">
+    <div class="container results-hero-inner">
+      <div class="results-hero-copy">
+        <p class="kicker">Results</p>
+        <h1>Not testimonials — receipts.</h1>
+        <p class="sub">
+          Real screenshots, real outcomes, and real reviews from clients using the engine.
+          If you’re serious about consistent booked calls — this is what it looks like.
         </p>
 
-        <div class="hero-cta">
-          <a href="#book" class="btn-primary large">Book a 15-minute call</a>
-          <a href="index.html#how" class="btn-secondary">See the engine</a>
+        <div class="results-hero-actions">
+          <a class="btn-primary large" href="#book" data-book>Book a 15-minute call</a>
+          <a class="btn-secondary" href="index.html">Back to home</a>
         </div>
       </div>
 
-      <div class="hero-visual">
-        <div class="results-card">
-          <div class="results-card-top">
-            <div>
-              <div class="kicker">Quick snapshot</div>
-              <h3 class="results-card-title">What clients notice first</h3>
-            </div>
-            <span class="chip">Proof-first</span>
+      <div class="results-hero-card">
+        <div class="results-mini">
+          <div class="rm-kpi">
+            <span class="rm-l">Booked calls</span>
+            <span class="rm-v">8–20 / wk</span>
           </div>
-
-          <ul class="results-bullets">
-            <li>✅ Faster speed-to-lead</li>
-            <li>✅ More booked calls</li>
-            <li>✅ Cleaner pipeline</li>
-            <li>✅ Clear ROI & reporting</li>
-          </ul>
-
-          <a class="btn-primary" href="#book">Book a call</a>
+          <div class="rm-kpi">
+            <span class="rm-l">Speed-to-lead</span>
+            <span class="rm-v">~2 min</span>
+          </div>
+          <div class="rm-kpi">
+            <span class="rm-l">ROI range</span>
+            <span class="rm-v">3–6x</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- 3 PROOFS -->
-  <section class="section section-proof" aria-label="Top proof screenshots">
+  <!-- TOP PROOF (3) -->
+  <section class="section results-proof-top">
     <div class="container">
-      <div class="proof-top reveal">
-        <p class="kicker">Proof</p>
-        <h2>Three quick receipts.</h2>
-        <p class="sub">Unedited screenshots from real conversations.</p>
-      </div>
-
-      <div class="proof-grid reveal">
-        <figure class="proof-card">
-          <img src="proof4.png" alt="Client result screenshot 4" loading="lazy" decoding="async">
-        </figure>
-        <figure class="proof-card">
-          <img src="proof5.png" alt="Client result screenshot 5" loading="lazy" decoding="async">
-        </figure>
-        <figure class="proof-card">
-          <img src="proof6.png" alt="Client result screenshot 6" loading="lazy" decoding="async">
-        </figure>
+      <div class="results-proof-grid">
+        <figure class="proof-card"><img src="proof1.png" alt="Proof 1" loading="lazy"></figure>
+        <figure class="proof-card"><img src="proof2.png" alt="Proof 2" loading="lazy"></figure>
+        <figure class="proof-card"><img src="proof3.png" alt="Proof 3" loading="lazy"></figure>
       </div>
     </div>
   </section>
 
   <!-- CHAT BUBBLE REVIEWS -->
-  <section class="section section-bubbles" aria-label="Client reviews">
+  <section class="section results-bubbles">
     <div class="container">
-      <div class="bubbles-head reveal">
+      <div class="bubbles-head">
         <p class="kicker">Reviews</p>
-        <h2>What clients have to say.</h2>
-        <p class="sub">Laid out as chat bubbles so it feels human — not “testimonial cards”.</p>
+        <h2>What clients say after week 1.</h2>
+        <p class="sub">Short, raw feedback — the kind you get when the pipeline actually starts moving.</p>
       </div>
 
-      <div class="bubbles reveal">
-        <article class="bubble bubble-left">
-          <div class="bubble-inner">
-            <p>John’s leads and system have given us an extra $100k on our bottom line year on year</p>
-            <div class="bubble-meta">
-              <strong>Nicky M.</strong>
-              <span>No1 Real Estate Agent West Auckland</span>
-            </div>
-          </div>
-        </article>
+      <div class="bubbles-grid">
+        <div class="bubble bubble-left">
+          <p><strong>“We had our first proper week of consistent enquiries.”</strong></p>
+          <p>Follow-up is fast. Calendar started filling without us chasing.</p>
+          <span class="bubble-meta">Tradie • Auckland</span>
+        </div>
 
-        <article class="bubble bubble-right">
-          <div class="bubble-inner">
-            <p>John is a sharp, smart mover who gets things done. He is always one step ahead and his word is 100% genuine and always wanting the best for his clients</p>
-            <div class="bubble-meta">
-              <strong>Carolyn M.</strong>
-              <span>Real Estate Agent Napier</span>
-            </div>
-          </div>
-        </article>
+        <div class="bubble bubble-right">
+          <p><strong>“It finally feels organised.”</strong></p>
+          <p>We can see what’s working and what to scale. Massive relief.</p>
+          <span class="bubble-meta">Agency • NZ</span>
+        </div>
 
-        <article class="bubble bubble-left">
-          <div class="bubble-inner">
-            <p>The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!</p>
-            <div class="bubble-meta">
-              <strong>Amanda S.</strong>
-              <span>Real Estate Agent WGTN</span>
-            </div>
-          </div>
-        </article>
+        <div class="bubble bubble-left">
+          <p><strong>“We stopped missing leads.”</strong></p>
+          <p>Receptionist follow-up is the difference. No more cold enquiries.</p>
+          <span class="bubble-meta">Home services</span>
+        </div>
 
-        <article class="bubble bubble-right">
-          <div class="bubble-inner">
-            <p>Careful what you wish for working with John. He’ll have your business flying in a flash!</p>
-            <div class="bubble-meta">
-              <strong>Rachel J.</strong>
-              <span>CEO FIJI Yacht Cruises</span>
-            </div>
-          </div>
-        </article>
-
-        <article class="bubble bubble-left">
-          <div class="bubble-inner">
-            <p>I’ve invested 17k for 2019 and my return was $110k. Super happy and just gets better year on year.</p>
-            <div class="bubble-meta">
-              <strong>Paul S.</strong>
-              <span>Risk Insurance</span>
-            </div>
-          </div>
-        </article>
-
-        <article class="bubble bubble-right">
-          <div class="bubble-inner">
-            <p>My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!</p>
-            <div class="bubble-meta">
-              <strong>Mike M.</strong>
-              <span>ACC Business Advice</span>
-            </div>
-          </div>
-        </article>
+        <div class="bubble bubble-right">
+          <p><strong>“Booked calls are higher quality.”</strong></p>
+          <p>Less tyre-kickers, more decision makers. It’s cleaner.</p>
+          <span class="bubble-meta">Solar</span>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- MORE PROOF -->
+  <!-- MORE PROOF WALL -->
   <section class="section section-proofwall" aria-label="More proof screenshots">
     <div class="container">
       <div class="proofwall-head reveal">
         <p class="kicker">More proof</p>
         <h2>Scroll the receipts.</h2>
-        <p class="sub">More screenshots, same story: booked calls and clean follow-up.</p>
+        <p class="sub">Unedited snapshots from real conversations and wins.</p>
       </div>
 
       <div class="proof-wall reveal">
-        <img src="proof7.png" alt="Client result screenshot 7" loading="lazy" decoding="async">
-        <img src="proof8.png" alt="Client result screenshot 8" loading="lazy" decoding="async">
-        <img src="proof9.png" alt="Client result screenshot 9" loading="lazy" decoding="async">
-        <img src="proof10.png" alt="Client result screenshot 10" loading="lazy" decoding="async">
-        <img src="proof11.png" alt="Client result screenshot 11" loading="lazy" decoding="async">
-        <img src="proof12.png" alt="Client result screenshot 12" loading="lazy" decoding="async">
+        <img src="proof4.png" alt="Proof 4" loading="lazy">
+        <img src="proof5.png" alt="Proof 5" loading="lazy">
+        <img src="proof6.png" alt="Proof 6" loading="lazy">
+        <img src="proof7.png" alt="Proof 7" loading="lazy">
+        <img src="proof8.png" alt="Proof 8" loading="lazy">
+        <img src="proof9.png" alt="Proof 9" loading="lazy">
+        <img src="proof10.png" alt="Proof 10" loading="lazy">
+        <img src="proof11.png" alt="Proof 11" loading="lazy">
+        <img src="proof12.png" alt="Proof 12" loading="lazy">
       </div>
     </div>
   </section>
 
-  <!-- BOOKING -->
-  <section class="section section-book" id="book" aria-label="Book a call">
+  <!-- BOOK / CALENDLY EMBED -->
+  <section class="section section-book" id="book">
     <div class="container">
-      <div class="book-head reveal">
-        <p class="kicker">Book a call</p>
-        <h2>Want this running for your business?</h2>
-        <p class="sub">
-          Pick a time below — we’ll map your pipeline, your follow-up, and exactly what to install.
-        </p>
-      </div>
-
       <div class="book-card reveal">
-        <div
-          class="calendly-inline-widget"
-          data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
-          style="min-width:320px;height:780px;"
-        ></div>
+        <div class="book-copy">
+          <p class="kicker">Book a call</p>
+          <h2>Let’s build your next 30 days.</h2>
+          <p class="sub">Pick a time. We’ll map the engine, the follow-up, and the plan to scale.</p>
+        </div>
+
+        <div class="calendly-shell">
+          <div class="calendly-inline-widget"
+               data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
+               style="min-width:320px;height:720px;">
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- FOOTER (FULL) -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <div class="footer-grid">
         <div class="footer-col">
-          <img src="logo2.png" alt="Acquisition Engine" class="footer-logo" />
+          <img src="logo2.png" alt="ONIX" class="footer-logo" />
           <p class="footer-desc">
             A fully managed acquisition + follow-up engine for tradies, solar, agencies, and service businesses.
           </p>
@@ -236,19 +184,17 @@
         </div>
 
         <div class="footer-col">
-          <h4>Product</h4>
-          <a href="results.html">Results</a>
+          <h4>Pages</h4>
+          <a href="index.html">Home</a>
+          <a href="index.html#proof">Results</a>
           <a href="index.html#how">How it works</a>
           <a href="index.html#pricing">Pricing</a>
-          <a href="#book">Book a call</a>
         </div>
 
         <div class="footer-col">
-          <h4>Company</h4>
-          <a href="index.html">Home</a>
-          <a href="index.html#proof">Why us</a>
-          <a href="#book">Contact</a>
-          <a href="#book">Support</a>
+          <h4>Get started</h4>
+          <a href="#book" data-book>Book a call</a>
+          <a href="results.html">See proof</a>
         </div>
 
         <div class="footer-col">
@@ -260,7 +206,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>© <span id="year"></span> Acquisition Engine. All rights reserved.</p>
+        <p>© <span id="year"></span> ONIX. All rights reserved.</p>
         <p class="footer-promise">If you don’t win work, we don’t get paid.</p>
       </div>
     </div>
