Update SEO title and add favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oaks Acquisition</title>
+  <title>ONIX Marketing</title>
+  <meta name="description" content="ONIX Marketing helps service businesses generate enquiries, follow up fast, and book qualified calls with a managed acquisition system." />
+  <link rel="icon" href="logo2.png" type="image/png" />
 
   <link rel="stylesheet" href="styles.css" />
 
