--- a/results.html
+++ b/results.html
@@ -1,115 +1,280 @@
-<!DOCTYPE html>
+<!-- =========================
+     START: results.html
+========================= -->
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ONIX — Results</title>
-
-  <meta name="description" content="Real outcomes from real lead systems. See how ONIX installs a pipeline that delivers enquiries, books calls, and tracks ROI." />
-
-  <link rel="icon" href="logo2.png" type="image/png" />
-  <link rel="stylesheet" href="styles.css" />
-
+  <title>ONIX Results — Proof & Outcomes</title>
+  <meta name="description" content="Results and outcomes from ONIX: booked calls, higher close rate, and follow-up systems that work." />
+  <link rel="icon" href="./assets/logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
-  <!-- Global animated background -->
+  <!-- Background -->
   <div class="site-bg" aria-hidden="true">
-    <div class="site-aurora"></div>
-    <div class="site-noise"></div>
+    <div class="aurora"></div>
+    <div class="noise"></div>
+    <div class="vignette"></div>
   </div>
 
-  <!-- HEADER (same as home) -->
-  <header class="header">
-    <div class="header-inner">
-      <a href="index.html" aria-label="Go to home">
-        <img src="logo2.png" alt="ONIX" class="logo" />
+  <!-- Sticky Header -->
+  <header class="header" id="top">
+    <div class="container header-inner">
+      <a class="brand" href="./index.html" aria-label="ONIX Home">
+        <img class="brand-logo" src="./assets/logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+        <span class="brand-name">ONIX</span>
       </a>
 
       <nav class="nav" aria-label="Primary">
-        <a href="results.html">Results</a>
-        <a href="index.html#how">How it works</a>
-        <a href="index.html#pricing">Pricing</a>
-        <a href="index.html#book" class="btn-primary">Book a Call</a>
+        <a href="./results.html" class="is-current">Results</a>
+        <a href="./index.html#how">How it works</a>
+        <a href="./index.html#pricing">Pricing</a>
+        <a href="./results.html" class="hide-sm">Results Page</a>
+        <a href="#book" class="btn btn-sm btn-primary">Book a Call</a>
       </nav>
+
+      <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false" aria-controls="mobileNav">
+        <span class="nav-toggle-ic" aria-hidden="true"></span>
+      </button>
+    </div>
+
+    <div class="mobile-nav" id="mobileNav" hidden>
+      <div class="container mobile-nav-inner">
+        <a href="./results.html">Results</a>
+        <a href="./index.html#how">How it works</a>
+        <a href="./index.html#pricing">Pricing</a>
+        <a href="./results.html">Results Page</a>
+        <a href="#book" class="btn btn-primary">Book a Call</a>
+      </div>
     </div>
   </header>
 
-  <!-- RESULTS HERO -->
-  <section class="results-hero">
-    <div class="results-grid">
-      <div class="results-card reveal">
-        <div class="kicker">RESULTS</div>
-        <h1 class="h2">Real outcomes from real lead systems.</h1>
-        <p class="p">
-          If you want a pipeline that delivers enquiries, books calls, and tracks ROI,
-          we’ll show you exactly how it works — and if you’re a fit, we’ll install it.
-        </p>
+  <main>
+    <!-- Results Hero -->
+    <section class="section results-hero" aria-label="Results hero">
+      <div class="container results-grid">
+        <div class="results-left">
+          <div class="pill reveal">
+            <span class="pill-dot" aria-hidden="true"></span>
+            Proof & outcomes
+          </div>
 
-        <div class="stat-row">
-          <div class="stat">
-            <div class="n">$100k</div>
-            <div class="t">extra bottom line</div>
+          <h1 class="h1 reveal" style="--d: 70ms">Results that show up in your calendar.</h1>
+          <p class="subhead reveal" style="--d: 120ms">
+            When speed-to-lead and follow-up are installed properly, you stop losing warm enquiries —
+            and start booking calls consistently.
+          </p>
+
+          <div class="stats-row">
+            <div class="glass card stat reveal" style="--d: 170ms">
+              <div class="stat-top">
+                <div class="stat-k">Bottom-line growth</div>
+                <div class="stat-v">$100k</div>
+              </div>
+              <div class="stat-s">From follow-up + booked calls improvements</div>
+            </div>
+
+            <div class="glass card stat reveal" style="--d: 210ms">
+              <div class="stat-top">
+                <div class="stat-k">Return</div>
+                <div class="stat-v">$110k</div>
+              </div>
+              <div class="stat-s">From ~$17k spend (example outcome)</div>
+            </div>
+
+            <div class="glass card stat reveal" style="--d: 250ms">
+              <div class="stat-top">
+                <div class="stat-k">Lead volume</div>
+                <div class="stat-v">20–25</div>
+              </div>
+              <div class="stat-s">Qualified leads/month (typical)</div>
+            </div>
           </div>
-          <div class="stat">
-            <div class="n">$110k</div>
-            <div class="t">return from 17k</div>
+
+          <div class="quotes">
+            <article class="glass card quote reveal" style="--d: 140ms">
+              <p>“We stopped missing enquiries. The follow-up is polite but persistent — and the calendar stays full.”</p>
+              <div class="quote-by">— Local services owner</div>
+            </article>
+            <article class="glass card quote reveal" style="--d: 190ms">
+              <p>“The system feels premium. Everything is clean: pipeline stages, reminders, and tracking.”</p>
+              <div class="quote-by">— Agency operator</div>
+            </article>
+            <article class="glass card quote reveal" style="--d: 240ms">
+              <p>“We got more booked calls without increasing ad spend — just better speed-to-lead + sequences.”</p>
+              <div class="quote-by">— Solar / trades</div>
+            </article>
           </div>
-          <div class="stat">
-            <div class="n">20–25</div>
-            <div class="t">leads/month example</div>
+
+          <div class="cta-row reveal" style="--d: 280ms">
+            <a class="btn btn-primary btn-lg" href="#book">Book a 15-minute call</a>
+            <a class="btn btn-ghost btn-lg" href="./index.html#pricing">See pricing</a>
           </div>
         </div>
 
-        <div class="results-list">
-          <div class="tick"><div class="dot"></div><div><b>Qualified enquiries</b> <span>delivered in real time.</span></div></div>
-          <div class="tick"><div class="dot"></div><div><b>Fast follow-up</b> <span>so leads don’t go cold.</span></div></div>
-          <div class="tick"><div class="dot"></div><div><b>Booked calls</b> <span>with tracking + reporting.</span></div></div>
+        <aside class="results-right reveal" style="--d: 160ms" aria-label="Calendly embed">
+          <div class="glass card embed-card">
+            <div class="embed-card-top">
+              <div>
+                <div class="kicker">Book a call</div>
+                <div class="dash-title">Pick a time</div>
+              </div>
+              <a class="link" href="./index.html">Back to home →</a>
+            </div>
+
+            <div class="embed-wrap">
+              <iframe
+                title="Calendly"
+                class="calendly"
+                src="https://calendly.com/"
+                loading="lazy"
+              ></iframe>
+            </div>
+            <div class="embed-note">Replace the URL with your exact Calendly link.</div>
+          </div>
+
+          <div class="float float-1" aria-hidden="true"></div>
+          <div class="float float-2" aria-hidden="true"></div>
+        </aside>
+      </div>
+    </section>
+
+    <!-- Results Proof Grid -->
+    <section class="section" aria-label="Proof gallery">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">Screenshots</div>
+          <h2 class="h2">Unedited client proof</h2>
+          <p class="p">Drop your screenshots into <code>/assets</code> and update the paths. Layout stays stable even if some images are missing.</p>
         </div>
 
-        <div style="height:14px"></div>
+        <div class="proof-grid reveal">
+          <figure class="proof-tile">
+            <img src="./assets/proof-1.png" alt="Proof screenshot 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+          <figure class="proof-tile">
+            <img src="./assets/proof-2.png" alt="Proof screenshot 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+          <figure class="proof-tile">
+            <img src="./assets/proof-3.png" alt="Proof screenshot 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+          <figure class="proof-tile">
+            <img src="./assets/proof-4.png" alt="Proof screenshot 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+          <figure class="proof-tile">
+            <img src="./assets/proof-5.png" alt="Proof screenshot 5" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+          <figure class="proof-tile">
+            <img src="./assets/proof-6.png" alt="Proof screenshot 6" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+        </div>
+      </div>
+    </section>
 
-        <div class="proof-grid" aria-label="Client quotes">
-          <div class="quote">
-            <p>“My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!”</p>
-            <div class="who">— Mike M. (ACC Business Advice)</div>
+    <!-- Book section anchor -->
+    <section class="section" id="book" aria-label="Book a call">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">Next step</div>
+          <h2 class="h2">Want this installed for your business?</h2>
+          <p class="p">If you’re spending on leads but losing them to slow follow-up, ONIX will fix that fast.</p>
+        </div>
+
+        <div class="glass card book-card reveal">
+          <div class="book-left">
+            <h3>Fast fit check</h3>
+            <ul class="list">
+              <li>We review your current funnel + lead flow</li>
+              <li>We map your follow-up gaps</li>
+              <li>We recommend the best install path</li>
+              <li>You leave with a clear plan either way</li>
+            </ul>
+            <a class="btn btn-primary btn-block" href="javascript:void(0)" data-scroll-to="#top">Back to top</a>
           </div>
-          <div class="quote">
-            <p>“The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!”</p>
-            <div class="who">— Amanda S. (Real Estate Agent WGTN)</div>
-          </div>
-          <div class="quote">
-            <p>“Careful what you wish for working with John. He’ll have your business flying in a flash!”</p>
-            <div class="who">— Rachel J. (CEO FIJI Yacht Cruises)</div>
+
+          <div class="book-right">
+            <div class="embed-wrap">
+              <iframe
+                title="Calendly"
+                class="calendly"
+                src="https://calendly.com/"
+                loading="lazy"
+              ></iframe>
+            </div>
+            <div class="embed-note">Replace the URL with your exact Calendly link.</div>
           </div>
         </div>
       </div>
-
-      <div class="calendly reveal" id="book" aria-label="Book a call">
-        <!-- Put your real Calendly URL here -->
-        <iframe
-          title="Book a call"
-          src="https://calendly.com/"
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-bottom">
-        <p>© <span id="year"></span> ONIX. All rights reserved.</p>
-        <p class="footer-promise"><a href="index.html" style="text-decoration: underline;">Back to Home</a></p>
+  <footer class="footer" aria-label="Footer">
+    <div class="container footer-grid">
+      <div class="foot-col">
+        <div class="foot-brand">
+          <img src="./assets/logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+          <div>
+            <div class="foot-name">ONIX</div>
+            <div class="foot-tag">Marketing • 1–1 acquisition + follow-up system</div>
+          </div>
+        </div>
+        <p class="foot-p">
+          Systems that feel premium — and perform.
+        </p>
+      </div>
+
+      <div class="foot-col">
+        <div class="foot-h">Pages</div>
+        <a href="./index.html">Home</a>
+        <a href="./results.html">Results</a>
+        <a href="./index.html#how">How it works</a>
+        <a href="./index.html#pricing">Pricing</a>
+      </div>
+
+      <div class="foot-col">
+        <div class="foot-h">Links</div>
+        <a href="#book">Book a call</a>
+        <a href="./index.html#pricing">Pricing</a>
+        <a href="./index.html#how">Engine map</a>
+      </div>
+
+      <div class="foot-col">
+        <div class="foot-h">Contact</div>
+        <a href="#book">Schedule a call</a>
+        <span class="foot-muted">Replace with your email + socials</span>
+        <div class="foot-chips">
+          <span class="chip small">Glass</span>
+          <span class="chip small">Fast</span>
+          <span class="chip small">Minimal</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container foot-bottom">
+      <div class="foot-line"></div>
+      <div class="foot-bottom-row">
+        <span>© <span data-year></span> ONIX. All rights reserved.</span>
+        <span class="foot-muted">Results page.</span>
       </div>
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
+<!-- =========================
+     END: results.html
+========================= -->
