--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
             <div class="proof-track" data-proof-track>
               <!-- If images missing, cards still render -->
               <figure class="proof proof-a">
-                <img src="./assets/proof-1.png" alt="Client message proof 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="./proof1.png" alt="Client message proof 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-b">
-                <img src="./assets/proof-2.png" alt="Client message proof 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="./proof2.png" alt="Client message proof 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-c">
-                <img src="./assets/proof-3.png" alt="Client message proof 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="./proof3.png" alt="Client message proof 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-d">
-                <img src="./assets/proof-4.png" alt="Client message proof 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="./proof4.png" alt="Client message proof 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
             </div>
@@ -634,3 +634,4 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
